RESOLVED FIXED48380
Pass a downloadID to the web process whenever a download is requested
https://bugs.webkit.org/show_bug.cgi?id=48380
Summary Pass a downloadID to the web process whenever a download is requested
Anders Carlsson
Reported 2010-10-26 15:08:26 PDT
Pass a downloadID to the web process whenever a download is requested
Attachments
Patch (9.02 KB, patch)
2010-10-26 15:10 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2010-10-26 15:10:19 PDT
Anders Carlsson
Comment 2 2010-10-26 16:07:20 PDT
Note You need to log in before you can comment on or make changes to this bug.