Pass a downloadID to the web process whenever a download is requested https://bugs.webkit.org/show_bug.cgi?id=48380

Reviewed by Sam Weinig.

* UIProcess/WebContext.cpp:
(WebKit::WebContext::generateDownloadID):
Generate a unique download ID.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::receivedPolicyDecision):
Pass along a download ID if needed.

* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::startDownload):
Call the web frame member function.

* WebProcess/WebPage/WebFrame.cpp:
(WebKit::WebFrame::WebFrame):
Initialize m_policyDownloadID.

(WebKit::WebFrame::invalidatePolicyListener):
Reset m_policyDownloadID.

(WebKit::WebFrame::didReceivePolicyDecision):
Set m_policyDownloadID.

(WebKit::WebFrame::startDownload):
Assert that m_policyDownloadID is not zero.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::didReceivePolicyDecision):
Pass along the download ID.

* WebProcess/WebPage/WebPage.messages.in:
Add the download ID.

Canonical link: https://commits.webkit.org/61112@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70585 268f45cc-cd09-0410-ab3c-d52691b4dbfc