WebKit2/UIProcess/WebContext.h
@@ -119,6 +119,9 @@ public:
     void setShouldPaintNativeControls(bool);
 #endif
 
+    // Downloads.
+    uint64_t generateDownloadID();
+
 private:
     WebContext(ProcessModel, const String& injectedBundlePath);
 
