WebKit2/WebProcess/WebPage/WebFrame.h
@@ -67,7 +67,9 @@ public:
 
     uint64_t setUpPolicyListener(WebCore::FramePolicyFunction);
     void invalidatePolicyListener();
-    void didReceivePolicyDecision(uint64_t listenerID, WebCore::PolicyAction);
+    void didReceivePolicyDecision(uint64_t listenerID, WebCore::PolicyAction, uint64_t downloadID);
+
+    void startDownload(const WebCore::ResourceRequest&);
 
     String source() const;
 
@@ -116,6 +118,7 @@ private:
 
     uint64_t m_policyListenerID;
     WebCore::FramePolicyFunction m_policyFunction;
+    uint64_t m_policyDownloadID;
 
     WebFrameLoaderClient m_frameLoaderClient;
     LoadListener* m_loadListener;
